update to jenkins

--- a/Task2/Jenkinsfile
+++ b/Task2/Jenkinsfile
@@ -1,8 +1,8 @@
 pipeline {
     agent any
     environment {
-        DOCKER_USER = "agray998"
-        MYSQL_ROOT_PASSWORD = "password123"
+        DOCKER_USER = "gvj74"
+        MYSQL_ROOT_PASSWORD = "sausages74"
     }
     stages {
         stage('Build and Push') {
