more changes to Jenkins again

--- a/Task1/Jenkinsfile
+++ b/Task1/Jenkinsfile
@@ -25,7 +25,7 @@
 
                 sh 'docker build -t $DOCKER_USER/task1/flask-app .'
 
-                sh 'docker build -t $DOCKER_USER/task1/mynginx -f Task1/Dockerfile.nginx .'
+                sh 'docker build -t $DOCKER_USER/task1/mynginx -f task1/Dockerfile.nginx .'
 
             }
 
